Fixed the titles, and made them flexible to the viewport. Also fixed spacing at the top of the image.

--- a/style.css
+++ b/style.css
@@ -193,8 +193,8 @@ h2{
 .container2 .title2{
   text-align: center;
   margin-bottom: 40px;
-  color: #acacac;
-  font-size: 40px;
+  color: #000;
+  font-size: 3vw;
 }
 .compare{
   position: relative;
